Add new components and service methods for news.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,8 +4,12 @@
   },
   "Nav": {
     "Home": "News",
+    "World": "World",
     "Persons": "Persons",
-    "Registration": "Registration"
+    "Registration": "Registration",
+    "Message": {
+      "World": "News of the world. The hottest and latest world news."
+    }
   },
   "Modal": {
     "Close": "Close",
