--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -4,8 +4,12 @@
   },
   "Nav":{
     "Home": "Новости",
+    "World": "Мир",
     "Persons": "Пользователи",
-    "Registration": "Регистрация"
+    "Registration": "Регистрация",
+    "Message": {
+      "World": "Мировые новости. Самые горячие и актуальные мировые новости."
+    }
   },
   "Modal":{
     "Close":"Отмена",
