--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -30,9 +30,10 @@
       "Title": "Форма входа :",
       "Login": "логин",
       "Password": "пароль",
-      "Register": "Зарегистрировваться",
       "Error": "Неправильный логин или пароль.",
-      "LogOut": "Выйти"
+      "LogOut": "Выйти",
+      "NoAccount": "Нет аккаунта?",
+      "Register": "Зарегистрироваться."
     },
     "Registration":{
       "Btn": "Регистрация",
@@ -43,6 +44,16 @@
   },
   "Home":{
     "Persons": "Любимые Пользователи:"
+  },
+  "News": {
+    "Details": {
+      "Edit": "Редактировать",
+      "Author": "автор статьи:",
+      "Comments": "Комментарии",
+      "Comment": "комментарий",
+      "NoComments": "Комментариев пока нет.",
+      "WriteComment": "Напишите ваш комментарий."
+    }
   },
   "Persons":{
     "Title": "Пользователи",
