--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -5,6 +5,7 @@
   "Nav":{
     "Home": "Новости",
     "World": "Мир",
+    "News": "Новости",
     "Persons": "Пользователи",
     "Registration": "Регистрация",
     "Message": {
@@ -46,13 +47,29 @@
     "Persons": "Любимые Пользователи:"
   },
   "News": {
+    "Title": "Новости",
+    "NewNews": "Новая новость",
     "Details": {
+      "News": "Новость",
+      "Details": "детали",
+      "CreateNewNews": "Создать новую новость.",
       "Edit": "Редактировать",
-      "Author": "автор статьи:",
+      "AuthorOfArticle":"автор статьи:",
+      "Author": "автор",
+      "Title": "заголовок",
+      "Article": "аннотация",
+      "Post": "содержание",
+      "Image": "изображение",
+      "Categories": "категории",
+      "Tags": "тэги",
+      "Date": "дата",
+      "Views": "просмотров",
+      "Published": "опубликованно",
       "Comments": "Комментарии",
       "Comment": "комментарий",
       "NoComments": "Комментариев пока нет.",
-      "WriteComment": "Напишите ваш комментарий."
+      "WriteComment": "Напишите ваш комментарий.",
+      "NotFound": "Новость не найдена."
     }
   },
   "Persons":{
