--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -18,6 +18,11 @@
       "Btn": "Удалить",
       "Title": "подвердите действи"
     },
+    "Add": {
+      "Btn": "Добавить",
+      "Title": "подвердите действи",
+      "Message": "Добавить новый тэг"
+    },
     "Save":{
       "Btn": "Сохранить",
       "Title": "подвердите действи"
@@ -38,9 +43,11 @@
     },
     "Registration":{
       "Btn": "Регистрация",
-      "Title": "Форма регистрации :",
-      "Login": "логин",
-      "Password": "пароль"
+      "Title": "Зарегистрировать пользователя :",
+      "Person": "пользователь",
+      "NotVerify": "Заполнены не все обязательные поля.",
+      "UserExist" : "Пользователь с таким логином уже существует.",
+      "Welcome": "Вы успешно зарегистрировались."
     }
   },
   "Home":{
@@ -62,6 +69,7 @@
       "Image": "изображение",
       "Categories": "категории",
       "Tags": "тэги",
+      "AddTag": "тэг",
       "Date": "дата",
       "Views": "просмотров",
       "Published": "опубликованно",
@@ -85,7 +93,12 @@
       "Image": "изображение",
       "Details": "детали",
       "CreateNewPerson": "Создать нового Пользователя",
-      "BtnBack": "назад"
+      "BtnBack": "назад",
+      "Roles": "Роли польователя.",
+      "News": "Новости от пользователя.",
+      "NoNews": "Новостей не найдено.",
+      "Comments": "Комментарии пользователя.",
+      "NoComments": "Комментариев пользователя нет."
     }
   },
   "User": {
