--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -4,13 +4,9 @@
   },
   "Nav":{
     "Home": "Новости",
-    "World": "Мир",
     "News": "Новости",
     "Persons": "Пользователи",
-    "Registration": "Регистрация",
-    "Message": {
-      "World": "Мировые новости. Самые горячие и актуальные мировые новости."
-    }
+    "Registration": "Регистрация"
   },
   "Modal":{
     "Close":"Отмена",
@@ -98,7 +94,8 @@
       "News": "Новости от пользователя.",
       "NoNews": "Новостей не найдено.",
       "Comments": "Комментарии пользователя.",
-      "NoComments": "Комментариев пользователя нет."
+      "NoComments": "Комментариев пользователя нет.",
+      "Info": "Информация о пользователе"
     }
   },
   "User": {
